--- a/package.json
+++ b/package.json
@@ -1,36 +1,38 @@
 {
-  "name": "simple-table-example",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@atlaskit/css-reset": "^4.0.1",
-    "bootstrap": "^4.0.0-alpha.6",
-    "prop-types": "^15.7.2",
-    "react": "^16.8.6",
-    "react-beautiful-dnd": "^11.0.3",
-    "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1",
-    "styled-components": "^4.2.0"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "name": "simple-table-example",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@atlaskit/css-reset": "^4.0.1",
+        "bootstrap": "^4.3.1",
+        "prop-types": "^15.7.2",
+        "react": "^16.8.6",
+        "react-beautiful-dnd": "^11.0.3",
+        "react-bootstrap": "^1.0.0-beta.8",
+        "react-dom": "^16.8.6",
+        "react-router-dom": "^5.0.0",
+        "react-scripts": "3.0.1",
+        "styled-components": "^4.2.0"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
+    },
+    "eslintConfig": {
+        "extends": "react-app"
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    }
 }
