--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "private": true,
     "dependencies": {
         "@atlaskit/css-reset": "^4.0.1",
+        "@material-ui/core": "^4.0.1",
+        "@material-ui/icons": "^4.0.1",
         "bootstrap": "^4.3.1",
         "prop-types": "^15.7.2",
         "react": "^16.8.6",
